--- a/Course Material/05-game-engine-activity/index.html
+++ b/Course Material/05-game-engine-activity/index.html
@@ -10,14 +10,16 @@
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <!-- Library script(s) go here -->
+    <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
   </head>
 
   <body>
     <!-- HTML would go here if needed. -->
 
     <!-- My script(s) -->
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js"></script>
+    <script src="js/Boot.js"></script>
+    <script src="js/Play.js"></script>
+    <script src="js/main.js"></script>
   </body>
 
 </html>
